--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <h3>Programación&nbsp;
                   <img src="https://img.icons8.com/fluent/25/000000/visual-studio-code-2019.png" style="margin-bottom: -5px;"/>
                 </h3>
-                    <p class="tiny opacity-6">Uso de HTML, CSS, Python, JavaScript / React y C#.</p>
+                    <p class="tiny opacity-6">Uso de HTML, CSS, JavaScript y C#.</p>
                 </li>
                 <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-7 fromLeft">
                 <h3>Diseño Gráfico&nbsp;
@@ -386,7 +386,7 @@
                 <div class="text-26">
                   <h3 class="ae-3 fromRight">Comprobar todos los certificados</h3>
                   <div class="ae-5 fromRight">
-                    <p class="tiny opacity-6">Por favor dirigirse al siguiente <a href="https://url2.cl/HQ2hx" style="color: #FFBA08;">enlace</a>.</p>
+                    <p class="tiny opacity-6">Por favor dirigirse al siguiente <a href="https://ister-my.sharepoint.com/personal/gary_veloz_ister_edu_ec/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fgary%5Fveloz%5Fister%5Fedu%5Fec%2FDocuments%2FCertificados&originalPath=aHR0cHM6Ly9pc3Rlci1teS5zaGFyZXBvaW50LmNvbS86ZjovZy9wZXJzb25hbC9nYXJ5X3ZlbG96X2lzdGVyX2VkdV9lYy9FaU1ILVZheHpqMUduV054TUVXY1EwVUJ6RGVoa1lfVzJ2YW10a1pRajliSHlRP3J0aW1lPVd6NXQ3Ql9ZMkVn" style="color: #FFBA08;">enlace</a>.</p>
                   </div>
                 </div>
               </div>
